# MyFinanceApp

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/models/: __init__.py  budget.py  category.py  fixed_rule.py  goal.py  installment_plan.py  source.py  transaction.py
app/routers/: config.py  dashboard.py  faturas.py  fixed.py  goals.py  installments.py  projection.py  reports.py  transactions.py
app/schemas/: fixed.py  installment.py  transaction.py
app/services/: alerts.py  budgets.py  dashboard.py  fatura.py  fatura_settlement.py  fixed.py  fixed_projection.py  goals.py  installments.py  projection.py  reports.py  seed.py  sources.py  transactions.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html
app/templates/_partials/: sidebar.html  statusbar.html  topbar.html
docker/: Dockerfile
docker/postgres/: init.sql
migrations/: env.py
migrations/versions/: 0001_initial_sources_and_categories.py  0002_transactions.py  0003_transactions_table.py  0004_installment_plans.py  0005_fixed_rules.py  0006_budgets.py  0007_goals.py
scripts/: backup.sh  restore.sh  seed_demo.py  update.sh
tests/: conftest.py  test_smoke.py
tests/services/: test_alerts_service.py  test_budgets_service.py  test_dashboard_service.py  test_fatura.py  test_fixed_projection.py  test_goals_service.py  test_installments_service.py  test_projection_service.py  test_reports_service.py  test_transaction_due_date.py  test_transactions_service.py
(+21 files in other folders)
