[project]
name = "myfinanceapp"
version = "0.1.0"
description = "Sistema pessoal de finanças"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.32.*",
  "jinja2==3.1.*",
  "sqlalchemy==2.0.*",
  "psycopg[binary]==3.2.*",
  "alembic==1.14.*",
  "pydantic==2.10.*",
  "pydantic-settings==2.6.*",
  "python-multipart==0.0.*",
  "python-dateutil==2.9.*",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.*",
  "pytest-asyncio==0.24.*",
  "httpx==0.28.*",
  "ruff==0.8.*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
